# btSDK

./: CMakeLists.txt  README.md
cmake/: bt_options.cmake  dependencies.cmake  platform.cmake
private/bt/: bt.cpp
private/bt/android/app/: AndroidApp.cpp
private/bt/android/async/: AndroidMutex.cpp
private/bt/android/graphics/: AndroidGraphics.cpp
private/bt/android/jni/: AndroidJNIAdapter.cpp  AndroidJNICache.cpp
private/bt/android/metrics/: AndroidLogger.cpp
private/bt/core/app/: Application.cpp
private/bt/core/assets/: Asset.cpp  LoadEvent.cpp
private/bt/core/async/: Lock.cpp  Mutex.cpp  SpinLock.cpp
private/bt/core/containers/: AsyncDequeue.cpp
private/bt/core/engine/: ArcadeEngine.cpp  Engine.cpp
private/bt/core/game/: Game.cpp
private/bt/core/graphics/: GraphicsManager.cpp
private/bt/core/math/: Color4f.cpp
private/bt/core/metrics/: Exception.cpp  Log.cpp
private/bt/core/render/: LoadEvent.cpp  RenderManager.cpp
private/bt/core/render/events/: LoadEvent.cpp  SurfaceDrawEvent.cpp  SurfaceReadyEvent.cpp
private/bt/ecs/: ecs.cpp
private/bt/ecs/component/: Component.cpp  ComponentsManager.cpp
private/bt/ecs/entity/: EntitiesManager.cpp  Entity.cpp
private/bt/ecs/event/: Event.cpp  EventsManager.cpp
private/bt/ecs/system/: System.cpp  SystemsManager.cpp
private/bt/gl/render/: GLRenderManager.cpp
private/bt/gl/render/events/: GLSurfaceDrawEvent.cpp  GLSurfaceReadyEvent.cpp
private/bt/java/jni/: JNIAdapter.cpp  JNICache.cpp
public/bt/: bt.hpp
public/bt/android/: CMakeLists.txt
public/bt/android/app/: AndroidApp.hpp
public/bt/android/async/: AndroidMutex.hpp
public/bt/android/graphics/: AndroidGraphics.hpp
public/bt/android/jni/: AndroidJNIAdapter.hpp  AndroidJNICache.hpp  AndroidJNIParams.hpp  IAndroidNative.hxx
public/bt/android/metrics/: AndroidLogger.hpp
public/bt/cfg/: bt_api.hpp  bt_assert.hpp  bt_atomic.hpp  bt_bits.hpp  bt_components.hpp  bt_events.hpp  bt_log.hpp  bt_map.hpp  bt_math.hpp  bt_memory.hpp  bt_mutex.hpp  bt_numeric.hpp  bt_open_gl.hpp  bt_platform.hpp  bt_queue.hpp  bt_sets.hpp  bt_string.hpp  bt_systems.hpp  bt_threads.hpp  bt_vector.hpp
public/bt/core/: CMakeLists.txt
public/bt/core/app/: AppParams.hpp  Application.hpp
public/bt/core/assets/: Asset.hpp  AssetsManager.hpp  IAsset.hxx  LoadEvent.hpp
public/bt/core/assets/materials/: IShader.hxx
public/bt/core/async/: AsyncStorage.hpp  ILock.hxx  IMutex.hxx  Lock.hpp  Mutex.hpp  SpinLock.hpp
public/bt/core/containers/: AsyncDeque.hpp  AsyncMap.hpp  AsyncVector.hpp  IMapIterator.hxx
public/bt/core/engine/: ArcadeEngine.hpp  Engine.hpp
public/bt/core/game/: Game.hpp
public/bt/core/graphics/: GraphicsManager.hpp  IGraphicsListener.hxx
public/bt/core/io/: IStream.hxx
public/bt/core/math/: Color4f.hpp
public/bt/core/memory/: IDMap.hpp  IDVector.hpp
public/bt/core/metrics/: Exception.hpp  ILogger.hxx  Log.hpp
public/bt/core/render/: IDrawable.hxx  LoadEvent.hpp  RenderManager.hpp
public/bt/core/render/events/: LoadEvent.hpp  SurfaceDrawEvent.hpp  SurfaceReadyEvent.hpp
public/bt/ecs/: CMakeLists.txt  ecs.hpp
public/bt/ecs/component/: Component.hpp  ComponentsManager.hpp  IComponentsManager.hxx
public/bt/ecs/entity/: EntitiesManager.hpp  Entity.hpp  IEntity.hxx
public/bt/ecs/event/: Event.hpp  EventsManager.hpp  IEvent.hxx  IEventInvoker.hxx  IEventListener.hxx  IEventsManager.hxx
public/bt/ecs/system/: ISystem.hxx  ISystemsManager.hxx  System.hpp  SystemsManager.hpp
public/bt/ecs/types/: ecs_api.hpp  ecs_assert.hpp  ecs_atomic.hpp  ecs_exceptions.hpp  ecs_ids.hpp  ecs_log.hpp  ecs_map.hpp  ecs_memory.hpp  ecs_mutex.hpp  ecs_numeric.hpp  ecs_queue.hpp  ecs_string.hpp  ecs_vector.hpp
public/bt/gl/: CMakeLists.txt
public/bt/gl/render/: GLRendererManager.hpp  IGLSurfaceListener.hxx
public/bt/gl/render/events/: GLSurfaceDrawEvent.hpp  GLSurfaceReadyEvent.hpp
public/bt/java/jni/: IJNIAdapter.hxx  IJNICache.hxx  JNIAdapter.hpp  JNICache.hpp
